--- a/ulc/src/src/App.css
+++ b/ulc/src/src/App.css
@@ -1,12 +1,33 @@
+body {
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
 .background { 
 
     display: flex;
-    flex-direction: row;
-    gap: 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     padding: 2px;
     border: 10px solid ;
     background-image: url('./assets/texture.jpg');
     border-radius: 20px;
     border-image: url('./assets/image.png') 20 repeat;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+.ta {
+    height: 24px;
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
