--- a/ulc/src/src/components/StageButton.css
+++ b/ulc/src/src/components/StageButton.css
@@ -13,6 +13,7 @@
     background-repeat: no-repeat;
 
     margin: 4px;
+    padding: 5px;
 
     color: rgb(81, 81, 81);
     font-family: Arial, Helvetica, sans-serif;
