--- a/ulc/src/src/App.css
+++ b/ulc/src/src/App.css
@@ -1,5 +1,10 @@
+#root {
+    background-color: rgba(0, 0, 0, 0) !important;
+}
+
 body {
     background-color: rgba(0, 0, 0, 0) !important;
+    overflow: hidden;
 }
 
 .background { 
